Fixing mobile overflow issue

--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -20,7 +20,6 @@ section {
   margin-right: auto;
   margin-left: auto;
   position: relative;
-  overflow: auto;
 }
 
 .content-title {
@@ -76,5 +75,6 @@ section {
     width: 100%;
     float: left;
     padding: 10px;
+    height: 100%;
   }
 }
